add: 알람 탭 작업중

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -18,28 +18,22 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
             android:backgroundTint="#DDE6ED"
-            android:orientation="vertical"
-            android:weightSum="9">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="4"
+                android:layout_height="70dp"
                 android:orientation="horizontal"
                 android:weightSum="14">
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                    android:layout_weight="7"
+                    android:gravity="center"
                     android:orientation="vertical"
                     android:weightSum="6">
 
@@ -47,18 +41,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1" />
-
-                    <TextView
-                        android:id="@+id/medicine_time1"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2"
-                        android:fontFamily="@font/tmoney_regular"
-                        android:gravity="center|center_vertical"
-                        android:includeFontPadding="false"
-                        android:text="오후"
-                        android:textColor="#757863"
-                        android:textSize="20dp" />
 
                     <TextView
                         android:id="@+id/medicine_time"
@@ -70,7 +52,7 @@
                         android:includeFontPadding="false"
                         android:text="13:30"
                         android:textColor="#757863"
-                        android:textSize="20dp" />
+                        android:textSize="25dp" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -78,20 +60,15 @@
                         android:layout_weight="1" />
                 </LinearLayout>
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2" />
-
                 <TextView
-                    android:id="@+id/medicine_name"
+                    android:id="@+id/routineCategoryName"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="7"
                     android:fontFamily="@font/tmoney_bold"
                     android:gravity="center_vertical"
                     android:includeFontPadding="false"
-                    android:text="약 이름 1"
+                    android:text="저녁 먹기 전"
                     android:textColor="#757863"
                     android:textSize="25dp" />
 
@@ -99,8 +76,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_height="40dp"
                 android:orientation="horizontal"
                 android:weightSum="20">
 
@@ -117,7 +93,7 @@
                     android:fontFamily="@font/tmoney_regular"
                     android:gravity="center"
                     android:includeFontPadding="false"
-                    android:text="다음 복용 시간"
+                    android:text="다음 복용까지"
                     android:textColor="#757863"
                     android:textSize="16sp" />
 
@@ -142,8 +118,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
+                android:layout_height="60dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="9">
@@ -186,6 +161,20 @@
                     android:tint="#757863"
                     app:srcCompat="@drawable/baseline_keyboard_arrow_down_24" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/prescriptionDetailLayout"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:orientation="vertical" />
             </LinearLayout>
         </LinearLayout>
 
