--- a/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -8,6 +8,7 @@
     android:paddingBottom="10dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -163,21 +164,26 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/prescriptionDetailLayout"
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:orientation="vertical" />
-            </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:gravity="right"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+        <LinearLayout
+            android:id="@+id/prescriptionDetailLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:orientation="vertical"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
