--- a/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="10dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/alarmRoutineCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -171,11 +171,12 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:gravity="right"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/alarmRoutineCardView">
 
         <LinearLayout
             android:id="@+id/prescriptionDetailLayout"
