--- a/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_main.xml
@@ -6,6 +6,38 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/emptyAlarmLinearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/emptyAlarmImageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:tint="#D3D3D3"
+            app:srcCompat="@drawable/baseline_alarm_on_24" />
+
+        <TextView
+            android:id="@+id/emptyAlarmTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/tmoney_regular"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:text="오늘 먹을 약이 없어:약"
+            android:textColor="#757863"
+            android:textSize="26sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
