--- a/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_routine_detail_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_routine_detail_item.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="@font/tmoney_bold"
             android:text="약 이름"
             android:textColor="#757863"
