--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_detail.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_detail.xml
@@ -16,10 +16,10 @@
 
         <TextView
             android:id="@+id/textView23"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="66.6dp"
             android:fontFamily="@font/tmoney_bold"
+            android:gravity="center"
             android:text="복약 상세 정보"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#757863"
