--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
@@ -89,6 +89,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="horizontal">
 
@@ -99,18 +100,33 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="0"
                         android:src="@drawable/baseline_circle_24"
-                        android:tint="@color/material_dynamic_neutral50" />
+                        android:tint="#80BA69" />
 
                     <TextView
                         android:id="@+id/btConnState"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/tmoney_regular"
                         android:includeFontPadding="false"
-                        android:text="Current State"
+                        android:text="약통이 등록 되었습니다"
                         android:textAlignment="viewStart"
                         android:textColor="#757863"
                         android:textSize="16sp" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btConnCheckBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="0"
+                        android:backgroundTint="#E3F2C1"
+                        android:text="통신 확인"
+                        android:textColor="#757863" />
 
                 </LinearLayout>
 
@@ -133,8 +149,7 @@
                         android:textColor="#757863"
                         android:textSize="18sp" />
 
-                    <View
-                        android:id="@+id/view2"
+                    <Space
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
