--- a/frontend/EYAK(rev2)/app/src/main/res/values/colors.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="red">#FFFF0000</color>
     <color name="yellow">#FFFFFF00</color>
     <color name="background">#FFF8FCF8</color>
+    <color name="gray">#FF808080</color>
 </resources>
