--- a/frontend/EYAK(rev2)/app/src/main/res/values/colors.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="yellow">#FFFFFF00</color>
     <color name="background">#FFF8FCF8</color>
     <color name="gray">#FF808080</color>
+    <color name="lightgray">#FFADB5BD</color>
 </resources>
