--- a/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
@@ -106,8 +106,8 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#AAABAE"
-                                android:backgroundTint="#AAABAE"
+                                android:background="#D8D8DA"
+                                android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
 
@@ -116,8 +116,8 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#AAABAE"
-                                android:backgroundTint="#AAABAE"
+                                android:background="#D8D8DA"
+                                android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
 
@@ -133,7 +133,7 @@
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
                                 android:background="#AAABAE"
-                                android:backgroundTint="#AAABAE"
+                                android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
 
@@ -142,8 +142,8 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#AAABAE"
-                                android:backgroundTint="#AAABAE"
+                                android:background="#D8D8DA"
+                                android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
                         </TableRow>
@@ -156,8 +156,8 @@
                         android:layout_height="210dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="20dp"
-                        android:background="#AAABAE"
-                        android:backgroundTint="#AAABAE"
+                        android:background="#D8D8DA"
+                        android:backgroundTint="#D8D8DA"
                         android:gravity="center"
                         android:orientation="vertical" />
 
